@@ -1,8 +1,9 @@
-ganv (1.5.0) unstable;
+ganv (1.5.1) unstable;
 
   * Fix positioning of embedded widgets when changing layout.
   * Fix unexpected node jumping when dragging new connections.
   * Preserve selection for quickly making several connections.
+  * Distinguish edge color from port color slighly.
   * Add support for PDF and PS export.
   * Improve text rendering at high zoom.
   * Fix various minor visual alignment/sizing issues.
@@ -10,7 +11,7 @@ ganv (1.5.0) unstable;
   * Fix compilation with --no-fdgl (patch from Vlad Glagolev).
   * Fix crash when destroying canvas.
 
- -- David Robillard <d@drobilla.net>  Sun, 15 Feb 2015 21:59:18 -0500
+ -- David Robillard <d@drobilla.net>  Sun, 15 Feb 2015 22:32:37 -0500
 
 ganv (1.4.2) stable;
 
